--- a/pages/route/addroute.wxml
+++ b/pages/route/addroute.wxml
@@ -1,7 +1,7 @@
 <!--pages/route/addroute.wxml-->
 <view class='item'>
   <input class='name' placeholder='按此输入路线名称'></input>
-  <path bind:chooseAddress="chooseAddress"></path>
+  <path bind:chooseAddress="chooseAddress" start='{{send_name}}' end='{{take_name}}'></path>
 
 
 </view>
