--- a/pages/main/index.wxml
+++ b/pages/main/index.wxml
@@ -1,6 +1,7 @@
 <!--pages/main/index.wxml-->
-<view>
 
+
+<view wx:if='{{list.length==0}}'>
   <view class='bg'>
     <text class='info'>为积极响应国务院关税税则委员会关于对原产于美国的汽车暂停加征关税的公告，北京梅赛德斯-奔驰销售服务有限公司宣布：即日起下调梅赛德斯-奔驰在中国大陆销售的全部美国进口车型厂家建议零售价，立即生效以提前惠益广大消费者。</text>
 
@@ -17,7 +18,15 @@
     </view>
 
   </view>
+
+  <view class='route' bindtap='route'>
+    <text class='txt'>常用路线</text>
+  </view>
+
 </view>
-<view class='route' bindtap='route'>
-  <text class='txt'>常用路线</text>
+<view wx:else>
+  <view style='background:#f5f5f5;width:100%;height:{{height}}px;'>
+    <orderItem list='{{list}}' bind:call="callphone" bind:viewOrderDetail="viewOrderDetail"></orderItem>
+  </view>
+
 </view>
