--- a/pages/tools/actspread.wxml
+++ b/pages/tools/actspread.wxml
@@ -29,9 +29,9 @@
       <text>上传车贴照片</text>
       <text bindtap='checkDetails'>查看明细</text>
     </view>
-    <image bindtap='uploadFirst' src='{{firstPic.length==0?"http://res.zhangyongfa888.site/ic_spread_add.png":"firstPic"}}' class='upload-img' mode='aspectFit'></image>
+    <image bindtap='{{firstPic.length==0?"uploadFirst":""}}' src='{{firstPic.length==0?"http://res.zhangyongfa888.site/ic_spread_add.png":firstPic}}' class='upload-img' mode='aspectFit'></image>
 
-    <image bindtap='uploadSecond' src='{{secondPic.length==0?"http://res.zhangyongfa888.site/ic_spread_add.png":"secondPic"}}' hidden='{{firstPic.length==0}}' class='upload-img' mode='aspectFit'></image>
+    <image bindtap='{{secondPic.length==0?"uploadSecond":""}}' src='{{secondPic.length==0?"http://res.zhangyongfa888.site/ic_spread_add.png":secondPic}}' hidden='{{firstPic.length==0}}' class='upload-img' mode='aspectFit'></image>
 
   </view>
 
