--- a/pages/main/order.wxss
+++ b/pages/main/order.wxss
@@ -1,1 +1,163 @@
 /* pages/main/order.wxss */
+
+.parent {
+  background-color: #f5f5f5;
+  display: flex;
+  flex-direction: column;
+}
+
+.bannerparent {
+  background-color: white;
+  height: 50px;
+  display: flex;
+  flex-direction: row;
+  justify-items: center;
+  align-items: flex-end;
+}
+
+.item {
+  padding-bottom: 10rpx;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 250rpx;
+  border-bottom: 4rpx solid transparent;
+}
+
+.item:active {
+  background: #f5f5f5;
+}
+
+.checked {
+  border-bottom: 4rpx solid #e67300;
+}
+
+.item-img {
+  width: 90rpx;
+  height: 90rpx;
+}
+
+.item-txt {
+  margin: 10rpx;
+  font-size: 30rpx;
+  color: #333;
+}
+
+.swiper {
+  margin-top: 10rpx;
+  width: 750rpx;
+  background: #f5f5f5;
+}
+
+.swiper-item {
+  /* background: white; */
+}
+
+.line {
+  margin-left: 20rpx;
+  background: white;
+  padding: 20rpx 0 20rpx 20rpx;
+  border-bottom: 2rpx solid #dcdcdc;
+  font-size: 30rpx;
+  color: #333;
+}
+
+.bottom {
+  background: white;
+  width: 750rpx;
+  position: fixed;
+  bottom: 0;
+  height: 90rpx;
+  display: flex;
+  flex-direction: row;
+  justify-items: center;
+}
+
+.bottom-img {
+  margin-right: 10rpx;
+  width: 40rpx;
+  height: 40rpx;
+}
+
+.bottom-border {
+  border-right: 2rpx solid #dcdcdc;
+}
+
+.bottom-line {
+  font-size: 30rpx;
+  text-align: center;
+  width: 50%;
+  justify-items: center;
+  align-items: center;
+  display: flex;
+  justify-content: center;
+  flex-direction: row;
+}
+
+.order-item {
+  border-radius: 4rpx;
+  box-shadow: 6rpx 6rpx 8rpx #999;
+  display: flex;
+  flex-direction: column;
+  margin: 15rpx;
+  background: white;
+  padding: 0 20rpx 20rpx 20rpx;
+}
+
+.order-title {
+  border-bottom: 1rpx solid #dcdcdc;
+  display: flex;
+  flex-direction: row;
+}
+
+.order-cartype {
+  font-size: 30rpx;
+  color: white;
+  margin: 10rpx;
+  padding: 10rpx;
+  background: #111;
+}
+
+.order-code {
+  color: #666;
+  margin-top: 20rpx;
+  flex-grow: 1;
+  font-size: 28rpx;
+}
+
+.order-status {
+  padding: 10rpx;
+  font-size: 26rpx;
+  height: 40rpx;
+  color: white;
+  background: #e67300;
+}
+
+.order-time-money {
+  display: flex;
+  margin-top: 10rpx;
+  flex-direction: row;
+}
+
+.order-time {
+  flex-grow: 1;
+  font-size: 26rpx;
+  color: #333;
+}
+
+.order-money {
+  font-size: 30rpx;
+  color: #333;
+}
+
+.nodata {
+  font-size: 30rpx;
+  color: #333;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+}
