--- a/pages/route/chooseAddress.wxml
+++ b/pages/route/chooseAddress.wxml
@@ -1,3 +1,3 @@
 <!--pages/route/chooseAddress.wxml-->
-<text>pages/route/chooseAddress.wxml</text>
 
+    <list-html data="{{city}}"  bind:detail="detail" my-city='true' config="{{config}}"></list-html>
