--- a/pages/wallet/setpassword.wxml
+++ b/pages/wallet/setpassword.wxml
@@ -1,17 +1,2 @@
-<!--pages/cisdomshipper/wallet/setpassword.wxml-->
-<!-- <sixpwd id="sixpass"   bind:passwordInput="passInput"></sixpwd> -->
-
-<view>
-  <input type='phone' placeholder='输入当前登录的手机号码' maxlength='12'></input>
-</view>
-<view class='lin2'>
-  <input type='number' placeholder='输入验证码' maxlength='4'></input>
-  <text>获取验证码</text>
-
-</view>
-<view>
-
-  <input type='password' maxlength='6' placeholder='六位数字密码'></input>
-  <input type='password' maxlength='6' placeholder='六位数字密码'></input>
-
-</view>
+<!--pages/wallet/setpassword.wxml-->
+<text>pages/wallet/setpassword.wxml</text>
